# ConnectWise-Python-Application

./: .gitignore  README.md  gui.py  pyproject.toml  wrapper.py
cw_wrapper/: sample_config.py  wrapper.py
cwm_wrapper/: wrapper.py
src/: pyproject.toml
upc_terminal_checkout/: main.py  test.py  wrapper.py
