[tool.poetry]
name = "pyconnectwise"
version = "0.1.0"
description = "API negotiator"
authors = ["Marcus Andrist <marcus.andrist@drake.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"
pyqt5 = "^5.15.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
